# data-refinery-env

./: .dockerignore  .gitignore  ARCHITECTURE.md  BENCHMARK_REPORT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  CURSOR_MASTER.md  DECISIONS.md  Dockerfile  FILE_STRUCTURE.md  LICENSE  META_CONTEXT.md  Makefile  README.md  README_DATAFORGE.md  REWARD_DESIGN.md  SECURITY.md  __init__.py  analyze_trajectory.py  baseline_output.txt  benchmark.py  client.py  compat.py  debug_hf_scores.py  generate_datasets.py  heuristic_baseline.py  inference.py  models.py  openenv.yaml  progress.md  prompt.template.md  pyproject.toml  ralph.sh  random_baseline.py  run_baseline.py  test_env.py  test_map.json  validate.py  (+4 more)
.cursor/rules/: dataforge.md
.github/ISSUE_TEMPLATE/: design_partner_feedback.yml
.github/workflows/: ci.yml  sync-to-hf.yml
.github_templates/: DESIGN_PARTNERS.template.md
benchmark_results/: results.json  results.md  results.tex
constitutions/: default.yaml
data_quality_env/: benchmark.py  client.py  compat.py  generate_datasets.py  heuristic_baseline.py  inference.py  models.py  random_baseline.py  run_baseline.py  test_env.py
data_quality_env/server/: Dockerfile  __init__.py  app.py  data_quality_environment.py
dataforge/: __init__.py  __main__.py
dataforge/agent/: __init__.py  providers.py
dataforge/bench/: __init__.py  core.py  groq_client.py  methods.py  report.py  runner.py
dataforge/causal/: __init__.py
dataforge/cli/: __init__.py  bench.py  common.py  profile.py  repair.py  revert.py
dataforge/datasets/: __init__.py  real_world.py  registry.py
dataforge/detectors/: __init__.py  base.py  decimal_shift.py  fd_violation.py  type_mismatch.py
dataforge/engine/: __init__.py
dataforge/env/: __init__.py
dataforge/integrations/: __init__.py
dataforge/repairers/: __init__.py  base.py  decimal_shift.py  fd_violation.py  type_mismatch.py
dataforge/safety/: __init__.py  constitution.py  filter.py
dataforge/safety/adversarial/: attack_01_phone_pii.yaml  attack_02_phone_pii.yaml  attack_03_phone_pii.yaml  attack_04_phone_pii.yaml  attack_05_phone_pii.yaml  attack_06_phone_pii.yaml  attack_07_phone_pii.yaml  attack_08_phone_pii.yaml  attack_09_phone_pii.yaml  attack_10_phone_pii.yaml  attack_11_ssn_pii.yaml  attack_12_ssn_pii.yaml  (+38 more)
dataforge/transactions/: __init__.py  log.py  revert.py  txn.py
dataforge/ui/: __init__.py  profile_view.py  repair_diff.py
dataforge/verifier/: __init__.py  explain.py  gate.py  schema.py  smt.py
datasets/: task1_customers.json  task1_ground_truth.json  task2_contacts.json  task2_ground_truth.json  task3_ground_truth.json  task3_orders.json  task3_products.json
eval/results/: agent_comparison.json  sota_comparison.json
fixtures/: hospital_schema.yaml
playground/: __init__.py
playground/api/: Dockerfile  README.md  SPACE_SETUP.md  __init__.py  _deploy_hf.py  _fix_dockerfile.py  _verify_live.py  app.py  requirements.txt
playground/web/: DEPLOY.md  app.js  config.js  index.html  style.css
scripts/: test_mapped.py
scripts/bench/: generate_report.py  run_agent_comparison.py  run_sota_comparison.py
scripts/ci/: readme_truth.py
scripts/playground/: build_samples.py  stage_space.py
server/: __init__.py  app.py  data_quality_environment.py  requirements.txt
specs/: QUESTIONS.md  SPEC_TEMPLATE.md  SPEC_benchmarks.md  SPEC_detectors.md  SPEC_playground.md  SPEC_safety.md  SPEC_smt_verifier.md  SPEC_transactions.md
tests/adversarial/: benign_samples.yaml  test_constitution_robustness.py
tests/benchmarks/: bench_safety_filter.py  bench_smt.py
tests/fixtures/: hospital_10rows.csv
tests/integration/: test_bench_workflow.py  test_playground_smoke.py  test_repair_pipeline.py
tests/property/: test_revert_is_bytes_identical.py
tests/regression/: test_env.py  test_legacy_wrappers.py
tests/unit/: test_base.py  test_bench_core.py  test_bench_groq_client.py  test_bench_methods.py  test_bench_real_world.py  test_bench_report.py  test_bench_runner.py  test_cli_bench.py  test_cli_common.py  test_cli_profile.py  test_cli_repair.py  test_decimal_shift.py  test_fd_violation.py  test_main.py  test_playground_stage_space.py  test_playground_web_contract.py  test_providers.py  test_repairers.py  test_repairers_registry.py  test_safety_constitution.py  test_safety_filter.py  test_smt_verifier.py  test_transactions.py  test_type_mismatch.py
(+11 files in other folders)
