# Copyright (c) 2026 Data Quality Environment Project
# SPDX-License-Identifier: MIT

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-data_quality_env"
version = "1.0.0"
description = "Data Quality Validation & Cleaning Pipeline — OpenEnv RL Environment"
requires-python = ">=3.10"
dependencies = [
    # Core OpenEnv runtime (provides FastAPI server + HTTP client types)
    "openenv-core[core]>=0.2.2",
    # Model validation
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "openai>=1.0",
]

[project.scripts]
# Server entry point — enables running via: uv run --project . server
# or: python -m data_quality_env.server.app
server = "data_quality_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["data_quality_env", "data_quality_env.server"]
package-dir = { "data_quality_env" = ".", "data_quality_env.server" = "server" }